// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CenteredContainer /> renders correctly 1`] = `
.c0 {
  max-width: 1440px;
  margin: auto;
}

<div
  className="c0"
/>
`;

exports[`<CenteredContainer /> renders correctly with maxWidth 1`] = `
.c0 {
  max-width: 1000px;
  margin: auto;
}

<div
  className="c0"
/>
`;
